--- a/homework9/circle_area.html
+++ b/homework9/circle_area.html
@@ -6,18 +6,24 @@
 <body>
 <h1>Circle Average Area</h1>
 <table border="1">
-<tr><th>Name</th><th>Average Area</th></tr>
+<tr><th>Name</th><th>Average Area</th><th>Minimum Area</th><th>Maximum Area</th></tr>
 <tr>
 <td>Layer 1</td>
-<td>314.9585</td>
+<td>265.3855</td>
+<td>0.20176885</td>
+<td>1222.0778</td>
 </tr>
 <tr>
 <td>Layer 2</td>
-<td>303.23923</td>
+<td>391.14578</td>
+<td>0.16142948</td>
+<td>1253.3372</td>
 </tr>
 <tr>
 <td>Layer 3</td>
-<td>312.15024</td>
+<td>403.9003</td>
+<td>0.008893616</td>
+<td>1216.8175</td>
 </tr>
 </table>
 </body>
